crates/squawk_parser/src/snapshots/parser__test__drop_trigger_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/drop_trigger.sql
---
SOURCE_FILE
  DROP_TRIGGER_STMT
    DROP_KW "drop"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "tr"
    WHITESPACE " "
    ON_KW "on"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "t"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_TRIGGER_STMT
    DROP_KW "drop"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "tr"
    WHITESPACE " "
    ON_KW "on"
    WHITESPACE " "
    PATH
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "bar"
      DOT "."
      PATH_SEGMENT
        NAME_REF
          IDENT "t"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_TRIGGER_STMT
    DROP_KW "drop"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "tr"
    WHITESPACE " "
    ON_KW "on"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "t"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_TRIGGER_STMT
    DROP_KW "drop"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "tr"
    WHITESPACE " "
    ON_KW "on"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "t"
    WHITESPACE " "
    CASCADE_KW "cascade"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_TRIGGER_STMT
    DROP_KW "drop"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "tr"
    WHITESPACE " "
    ON_KW "on"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "t"
    WHITESPACE " "
    RESTRICT_KW "restrict"
  SEMICOLON ";"
  WHITESPACE "\n\n"
