crates/squawk_parser/src/snapshots/parser__test__execute_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/execute.sql
---
SOURCE_FILE
  COMMENT "-- execute"
  WHITESPACE "\n"
  EXECUTE_STMT
    EXECUTE_KW "EXECUTE"
    WHITESPACE " "
    NAME_REF
      IDENT "fooplan"
    ARG_LIST
      L_PAREN "("
      LITERAL
        INT_NUMBER "1"
      COMMA ","
      WHITESPACE " "
      LITERAL
        STRING "'Hunter Valley'"
      COMMA ","
      WHITESPACE " "
      LITERAL
        STRING "'t'"
      COMMA ","
      WHITESPACE " "
      LITERAL
        FLOAT_NUMBER "200.00"
      R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  EXECUTE_STMT
    EXECUTE_KW "EXECUTE"
    WHITESPACE " "
    NAME_REF
      IDENT "usrrptplan"
    ARG_LIST
      L_PAREN "("
      LITERAL
        INT_NUMBER "1"
      COMMA ","
      WHITESPACE " "
      NAME_REF
        CURRENT_DATE_KW "current_date"
      R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  EXECUTE_STMT
    EXECUTE_KW "EXECUTE"
    WHITESPACE " "
    NAME_REF
      IDENT "foo"
  SEMICOLON ";"
  WHITESPACE "\n\n"
