crates/squawk_parser/src/snapshots/parser__test__load_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/load.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  LOAD_STMT
    LOAD_KW "load"
    WHITESPACE " "
    LITERAL
      STRING "'foo'"
  SEMICOLON ";"
  WHITESPACE "\n\n"
